Comment out polyfill.io requirement

--- a/src/script.html
+++ b/src/script.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.polyfill.io/v2/polyfill.js?features=Promise.prototype.finally&flags=always,gated&unknown=polyfill"></script>
+<!--script src="https://cdn.polyfill.io/v2/polyfill.js?features=Promise.prototype.finally&flags=always,gated&unknown=polyfill"></script-->
 <script src="../bower_components/comma-separated-values/csv.js"></script>
 <script src="../polyfills.js"></script>
 <script src="script.js"></script>
