Update fuse search (?)

--- a/src/my-search.html
+++ b/src/my-search.html
@@ -14,7 +14,7 @@
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="script.html">
-<script src="../bower_components/fuse/dist/fuse.min.js"></script>
+<script src="../bower_components/fuse/dist/fuse.js"></script>
 
 <dom-module id="my-search">
     <template>
