More hint for #files usage

--- a/src/my-files.html
+++ b/src/my-files.html
@@ -94,8 +94,15 @@
                             annak a kezdetét megadni.
                         </p>
                         <p>
-                            Először adja meg a fájl elérési útját, mint linket, majd itt generáljon
-                            helyette egy rövidebbet
+                            Először a fenti "Link" mezőben adja meg egy fájl elérési útját (pl.
+                            <code>Idő */feladat.pdf</code> illetve <code>Idő */minta.zip</code>),
+                            majd ebben a szekcióban állítsa be, hogy hogyan kívánja letitkosítani.
+                        </p>
+                        <p>
+                            Az elérhető állományokat a következő oldalon lehet böngészni,
+                            megtekinteni, letölteni, esetleg javaslatokat (<i>issue</i>) küldeni:
+                            <a href="https://github.com/lezsakdomi/elte-mester-data">Az
+                                alapértelmezett GitHub repository</a>
                         </p>
                     </div>
                 </template>
