--- a/src/my-settings.html
+++ b/src/my-settings.html
@@ -76,8 +76,8 @@
             </paper-toggle-button>
             <br>
 
-            <paper-toggle-button checked="{{useRawgitEverywhere}}">
-                Rawgit használata ahol csak lehetséges, <a>raw.githubusercontent.com</a> helyett
+            <paper-toggle-button checked="{{useRawgit}}">
+                Rawgit használata <a>raw.githubusercontent.com</a> helyett
             </paper-toggle-button>
         </div>
         <div class="card">
